add: controle de estoque, filtros e controle de ambientes
