# backend/docs/swagger.yaml
@@ -1,5 +1,19 @@
-basePath: /
+basePath: /api/
 definitions:
+  handlers.Hat:
+    properties:
+      categoria:
+        description: nacional, importado, crescer
+        type: string
+      id:
+        type: integer
+      nome:
+        type: string
+      price:
+        type: number
+      quantidade:
+        type: integer
+    type: object
   handlers.HatPedido:
     properties:
       id:
@@ -32,6 +46,9 @@ definitions:
     type: object
   models.Hat:
     properties:
+      categoria:
+        description: nacional, importado, crescer
+        type: string
       id:
         type: integer
       nome:
@@ -57,7 +74,7 @@ definitions:
       password:
         type: string
     type: object
-host: localhost:8080
+host: hatstore-prd.fly.dev
 info:
   contact: {}
   description: API da loja de chapéus Hat Store.
@@ -202,6 +219,21 @@ paths:
       summary: Finaliza o pedido
       tags:
       - checkout
+  /estoque:
+    get:
+      description: Retorna o estoque atual de cada chapéu
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.Hat'
+            type: array
+      summary: Lista o estoque de chapéus
+      tags:
+      - estoque
   /hats:
     get:
       description: Retorna a lista de chapéus disponíveis
